force-app/main/default/objects/hed__Plan_Requirement__c/fields/hed__Category__c.field-meta.xml
<CustomField>
    <fullName>hed__Category__c</fullName>
    <description>Indicates the type of Plan Requirement, for example, optional or required.</description>
    <inlineHelpText>Indique le type d&apos;exigence du plan, par exemple facultatif ou obligatoire.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>