force-app/main/default/objects/hed__Plan_Requirement__c/fields/hed__Credits__c.field-meta.xml
<CustomField>
    <fullName>hed__Credits__c</fullName>
    <description>The number of credits a student receives for satisfying this requirement.</description>
    <inlineHelpText>Le nombre de crédits qu&apos;un étudiant reçoit lorsqu&apos;il satisfait à cette exigence.</inlineHelpText>
    <label>Credits</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>