force-app/main/default/objects/hed__Plan_Requirement__c/fields/hed__Plan_Requirement__c.field-meta.xml
<CustomField>
    <fullName>hed__Plan_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Plan Requirement is one of multiple requirements or multiple levels of requirements, specifies the parent Plan Requirement. Use this field to group a list of optional Courses that satisfy a generic requirement.</description>
    <inlineHelpText>Si l&apos;exigence du plan fait partie d&apos;exigences multiples ou de niveaux d&apos;exigence multiples, spécifiez l&apos;exigence de plan parente. Utilisez ce champ pour regrouper une liste de cours facultatifs qui répondent à une exigence globale.</inlineHelpText>
    <label>Parent Plan Requirement</label>
    <referenceTo>hed__Plan_Requirement__c</referenceTo>
    <relationshipLabel>Plan Requirements</relationshipLabel>
    <relationshipName>Plan_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>