force-app/main/default/objects/hed__Plan_Requirement__c/fields/hed__Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>hed__Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program Plan this requirement is for. If you&apos;re grouping Plan Requirements together under a Parent Plan Requirement, best practice is to link only the top-level Plan Requirement to a Program Plan.</description>
    <inlineHelpText>Le Plan de programme auquel cette exigence correspond. Si vous regroupez des exigences de plan sous une exigence de plan parente, la meilleure pratique consiste à lier uniquement l&apos;exigence du plan de niveau supérieur à un plan de programme.</inlineHelpText>
    <label>Program Plan</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Plan Requirements</relationshipLabel>
    <relationshipName>Plan_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>