force-app/main/default/objects/hed__Plan_Requirement__c/fields/hed__Sequence__c.field-meta.xml
<CustomField>
    <fullName>hed__Sequence__c</fullName>
    <description>This requirement&apos;s place in the Program Plan, for example, &quot;1&quot; indicates the first semester. Use this field to indicate the overall progression for the entire Program Plan, or to sort the order of sub-requirements within a single parent Plan Requirement.</description>
    <inlineHelpText>La position de cette exigence dans le plan. Par exemple, 1 désigne le premier trimestre. Utilisez ce champ pour montrer la progression générale du plan complet ou pour organiser des exigences secondaires dans une exigence de plan parente unique.</inlineHelpText>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>