force-app/main/default/objects/hed__Plan_Requirement__c/fields/SIS_Duration__c.field-meta.xml
<CustomField>
    <fullName>SIS_Duration__c</fullName>
    <label>Duration</label>
    <type>TextArea</type>
</CustomField>