force-app/main/default/objects/hed__Plan_Requirement__c/fields/SIS_Famille__c.field-meta.xml
<CustomField>
    <fullName>SIS_Famille__c</fullName>
    <formula>IF(
ISPICKVAL(SIS_Requirement_Family__c, &quot;Credit&quot;),
 TEXT(hed__Credits__c) +&quot; ECTS&quot;,
IF(ISPICKVAL(SIS_Requirement_Family__c, &quot;Duration&quot;),
 SIS_Duration__c,
  IF(ISPICKVAL(SIS_Requirement_Family__c, &quot;Credit or Duration&quot;),
SIS_Duration__c + &quot; ou &quot; + TEXT(hed__Credits__c) +&quot; ECTS&quot;,
&quot;Pass / Fail&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Famille</label>
    <type>Text</type>
</CustomField>