force-app/main/default/objects/hed__Plan_Requirement__c/fields/SIS_Naming_Convention__c.field-meta.xml
<CustomField>
    <fullName>SIS_Naming_Convention__c</fullName>
    <formula>IF( SIS_Parent_Plan_Requirement__c,
LEFT(SIS_Label__c + &quot; [&quot; + hed__Program_Plan__r.Name + &quot;]&quot;,80),
LEFT(SIS_Label__c + &quot; - &quot; + hed__Plan_Requirement__r.Name,80)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Naming Convention</label>
    <type>Text</type>
</CustomField>