force-app/main/default/objects/hed__Plan_Requirement__c/fields/SIS_Parent_Child_Requirement__c.field-meta.xml
<CustomField>
    <fullName>SIS_Parent_Child_Requirement__c</fullName>
    <formula>AND(
NOT(ISBLANK(hed__Plan_Requirement__c)),
 ISBLANK(hed__Course__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Child Requirement</label>
    <type>Checkbox</type>
</CustomField>