force-app/main/default/objects/hed__Plan_Requirement__c/fields/SIS_Parent_Name_Modified__c.field-meta.xml
<CustomField>
    <fullName>SIS_Parent_Name_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case à côchée masquée qui sert à déclencher le flux &quot;Plan Requirement - Create and Update&quot;
La case se coche automatiquement lors du changement du nom de la structure pédagogique.
La case est décochée à la fin du flux &quot;Plan requirement...&quot;</description>
    <label>Nom de la structure modifiée</label>
    <type>Checkbox</type>
</CustomField>