force-app/main/default/objects/hed__Plan_Requirement__c/fields/SIS_Parent_Plan_Requirement__c.field-meta.xml
<CustomField>
    <fullName>SIS_Parent_Plan_Requirement__c</fullName>
    <formula>ISBLANK(hed__Plan_Requirement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Plan Requirement</label>
    <type>Checkbox</type>
</CustomField>