force-app/main/default/objects/hed__Plan_Requirement__c/fields/SIS_Requirement_Family__c.field-meta.xml
<CustomField>
    <fullName>SIS_Requirement_Family__c</fullName>
    <label>Requirement family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass / Fail</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Duration</fullName>
            </value>
            <value>
                <fullName>Credit or Duration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>