force-app/main/default/objects/hed__Plan_Requirement__c/listViews/Copie_de_All.listView-meta.xml
<ListView>
    <fullName>Copie_de_All</fullName>
    <columns>NAME</columns>
    <columns>hed__Category__c</columns>
    <columns>hed__Program_Plan__c</columns>
    <columns>hed__Plan_Requirement__c</columns>
    <columns>hed__Course__c</columns>
    <columns>hed__Credits__c</columns>
    <columns>SIS_Duration__c</columns>
    <columns>SIS_Requirement_Family__c</columns>
    <columns>hed__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>AST 2021</value>
    </filters>
    <label>AST 2021</label>
</ListView>