force-app/main/default/objects/hed__Plan_Requirement__c/listViews/hed__All.listView-meta.xml
<ListView>
    <fullName>hed__All</fullName>
    <columns>NAME</columns>
    <columns>hed__Category__c</columns>
    <columns>hed__Program_Plan__c</columns>
    <columns>hed__Course__c</columns>
    <columns>hed__Credits__c</columns>
    <columns>hed__Plan_Requirement__c</columns>
    <columns>SIS_Requirement_Family__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>